# leetcode-multilingual

./: .editorconfig  .gitignore  CHANGELOG.md  README.md
workspace/: .clang-format  .gitignore  README.md  commitlint.config.ts  cspell-words.txt  cspell.config.yaml  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
workspace/.husky/: commit-msg
workspace/scripts/: format-java.nu  outdated.nu  solve.ts  update.nu
workspace/scripts/format/: all.nu  clang.nu  ecmascript.nu  format.nu  go.nu  java.nu  kotlin.nu  python.nu  rust.nu
workspace/scripts/test/: all.nu  ecmascript.nu  go.nu  java.nu  kotlin.nu  python.nu  rust.nu  test.nu
workspace/solutions/ecmascript/: package.json  tsconfig.json
workspace/solutions/go/: .gitignore  go.mod
workspace/solutions/go/utils/: examples.go  structure.go  test.go  type.go  unmarshal.go
workspace/solutions/java/: .gitignore  settings.gradle
workspace/solutions/java/gradle/: libs.versions.toml
workspace/solutions/kotlin/: .gitignore  settings.gradle.kts
workspace/solutions/python/: .gitignore  README.md  pyproject.toml  ruff.toml
workspace/solutions/python/src/s0/s0/s0/s1/: s_0001_00.py  s_0001_test.py
workspace/solutions/python/src/s0/s3/s0/s3/: s_0303_00.py
workspace/solutions/python/src/s0/s3/s0/s4/: s_0304_00.py
workspace/solutions/python/src/utils/: example.py  test.py
workspace/solutions/rust/: .gitignore  Cargo.toml  rustfmt.toml
workspace/tools/eslint/: eslint.config.js  index.js  package.json
workspace/tools/tsconfig/: package.json
(+209 files in other folders)
